# supervisor-assistant

./: .gitignore  README.md  generate_data.py  index.html  ingest_students.py  main.py  pyproject.toml  train_model.py
