[project]
name = "supervisor-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "faker>=40.19.1",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.3",
    "google-genai>=2.6.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
]
